--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -5,4 +5,5 @@ title:  "Say Hello"
 
 # 나는 엔지니어입니다
 
-![_117310488_16](/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/_117310488_16.jpg)
+<img src="/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/_117310488_16.jpg" alt="_117310488_16" style="zoom:25%;" />
+
