Add droplet image

--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -5,5 +5,6 @@ title:  "Say Hello"
 
 # 나는 엔지니어입니다
 
-<img src="/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/_117310488_16.jpg" alt="_117310488_16" style="zoom:25%;" />
 
+
+<img src="/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/droplet.jpg" alt="droplet" style="zoom:50%;" />
