delete old add new image

--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -7,4 +7,4 @@ title:  "Say Hello"
 
 
 
-<img src="/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/droplet.jpg" alt="droplet" style="zoom:50%;" />
+![droplet](/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/droplet.jpeg)
