--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -7,4 +7,10 @@ title:  "Say Hello"
 
 
 
-![droplet](/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/droplet.jpeg)
+test
+
+# Test
+
+
+
+![IMG_2832_Original](/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/IMG_2832_Original.JPG)
