--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+![IMG_2832_Original](../images/IMG_2832_Original.JPG)layout: post
 title:  "Say Hello"
 ---
 
@@ -11,6 +11,4 @@ test
 
 # Test
 
-
-
-![IMG_2832_Original](/home/marojeon/Blog/wjsakfh.github.io/images/2021-10-10-Hello/IMG_2832_Original.JPG)
+![IMG_2832_Original](../images/IMG_2832_Original.JPG)
