add python code test

--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -19,3 +19,42 @@ test
 
 ## 메세지 추가합니다
 
+
+```python
+try:
+    if os.path.exists(STATS_FILE_PATH):
+        with open(STATS_FILE_PATH, 'r') as stats_file:
+            stats_manager.load_from_csv(stats_file)
+
+    # Start video_manager.
+    video_manager.start()
+    # Perform scene detection on video_manager.
+    scene_manager.detect_scenes(frame_source=video_manager)
+    # Obtain list of detected scenes.
+    scene_list = scene_manager.get_scene_list()
+
+    with open(os.getcwd() + '/results/scene_list.pickle', 'wb') as f:
+        pickle.dump(scene_list, f, pickle.HIGHEST_PROTOCOL)
+
+    print("scene_list", scene_list)
+    # Like FrameTimecodes, each scene in the scene_list can be sorted if the list of scenes becomes unsorted.
+    scene_frames_list = []
+    print('List of scenes obtained:')
+    for i, scene in enumerate(scene_list):
+        
+        scene_frames_list.append([i, scene[0].get_frames(), scene[1].get_frames()])
+
+        print(' scene %2d: Start %s / Frame %d, End %s / Frame %d' %(
+            i+1, scene[0].get_timecode(), scene[0].get_frames(),
+            scene[1].get_timecode(), scene[1].get_frames(),)
+        )
+    
+    # Write the stats file if a save is required:
+    if stats_manager_save_required:
+        with open(STATS_FILE_PATH, 'w') as stats_file:
+            stats_manager.save_to_csv(stats_file, base_timecode)
+    
+finally:
+    video_manager.release()
+```
+
