--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -1,24 +1,31 @@
 ---
-![IMG_2832_Original](../images/IMG_2832_Original.JPG)layout: post
+layout: single
 title:  "Say Hello"
+categories: Coding
+tag: [python, blog, engineer, beginner]
+toc: true
 ---
 
 # 나는 엔지니어입니다
 
-
+## 메세지 추가합니다1
+aaaa
+## 메세지 추가합니다2
+aaaa
+## 메세지 추가합니다3
+aaaa
 
 test
 
 # Test
 
 
-
-![IMG_2832_Original](../images/2021-10-10-Hello/IMG_2832_Original-16338766563181.JPG)
-
-
-
-## 메세지 추가합니다
-
+## 메세지 추가합니다1
+aaaa
+## 메세지 추가합니다2
+aaaa
+## 메세지 추가합니다3
+aaaa
 
 ```python
 try:
