edit a bunch of updates

--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -4,12 +4,34 @@ title:  "Say Hello"
 categories: Coding
 tag: [python, blog, engineer, beginner]
 toc: true
+author_profile: false
+sidebar:
+    nav: "docs"
+search: true
 ---
+
+**[Notice]** [Notice](https://teddylee777.github.io/)
+{: .notice--warning}
+
+<div class="notice--success">
+<h4>Notice</h4>
+<ul>
+    <li>list1</li>
+    <li>list2</li>
+    <li>list3</li>
+
+</ul>
+
+</div>
+
+[Button](https://google.com){: .btn .btn--danger}
+
+{% include video id="q0P3TSoVNDM" provider="youtube" %}
 
 # 나는 엔지니어입니다
 
 ## 메세지 추가합니다1
-aaaa
+aaaa ada adf
 ## 메세지 추가합니다2
 aaaa
 ## 메세지 추가합니다3
