--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -25,6 +25,8 @@ search: true
 </div>
 
 [Button](https://google.com){: .btn .btn--danger}
+[Button](https://google.com){: .btn .btn--danger}
+[Button](https://google.com){: .btn .btn--danger}
 
 {% include video id="q0P3TSoVNDM" provider="youtube" %}
 
