--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -13,6 +13,12 @@ search: true
 **[Notice]** [Notice](https://teddylee777.github.io/)
 {: .notice--warning}
 
+**[Notice]** [Notice](https://teddylee777.github.io/)
+{: .notice--warning}
+
+**[Notice]** [Notice](https://teddylee777.github.io/)
+{: .notice--warning}
+
 <div class="notice--success">
 <h4>Notice</h4>
 <ul>
