add ai category

--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -1,7 +1,7 @@
 ---
-layout: single
+layout: category
 title:  "Say Hello"
-categories: Coding
+categories: AI
 tag: [python, blog, engineer, beginner]
 toc: true
 author_profile: false
