--- a/_posts/2021-10-19-Good Day.md
+++ b/_posts/2021-10-19-Good Day.md
@@ -1,8 +1,8 @@
 ---
 layout: category
-title:  "Say Hello"
-categories: [AI, Research, Entrepreneurship, Engineering, Nature]
-tag: [python, blog, engineer, beginner]
+title:  "Good Day!"
+categories: [AI, Entrepreneurship, Nature]
+tag: [curiousity, blog, engineer, beginner]
 toc: true
 author_profile: false
 search: true
