--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -1,10 +1,10 @@
 ---
 layout: category
 title:  "Say Hello"
-categories: [AI, Research, Entrepreneurship, Engineering, Nature]
+categories: Researcher
 tag: [python, blog, engineer, beginner]
 toc: true
-author_profile: false
+author_profile: true
 search: true
 ---
 
