bunch of files updated

--- a/_posts/2021-10-10-Hello.md
+++ b/_posts/2021-10-10-Hello.md
@@ -1,7 +1,7 @@
 ---
 layout: category
 title:  "Say Hello"
-categories: Researcher
+categories: Research
 tag: [python, blog, engineer, beginner]
 toc: true
 author_profile: true
